@@ -2,34 +2,46 @@ package com.ssafy.aitime.domain.hospital.service;
 
 import com.ssafy.aitime.common.enums.RecordStatus;
 import com.ssafy.aitime.domain.child.entity.Child;
-import com.ssafy.aitime.domain.child.entity.enums.Gender; // ✅ 만약 패키지/이름 다르면 너 프로젝트 enum에 맞게 수정
+import com.ssafy.aitime.domain.child.entity.enums.Gender;
 import com.ssafy.aitime.domain.child.repository.ChildRepository;
-import com.ssafy.aitime.domain.exam.repository.ExamRepository;
+import com.ssafy.aitime.domain.child.service.ChildService;
+import com.ssafy.aitime.domain.exam.dto.response.AdosDetailResponse;
+import com.ssafy.aitime.domain.exam.dto.response.ExamWithVideosResponse;
+import com.ssafy.aitime.domain.exam.entity.Exam;
+import com.ssafy.aitime.domain.exam.entity.Video;
+import com.ssafy.aitime.domain.exam.entity.enums.ExamStatus;
+import com.ssafy.aitime.domain.exam.entity.enums.VideoType;
+import com.ssafy.aitime.domain.exam.service.ExamService;
+import com.ssafy.aitime.domain.exam.service.VideoService;
 import com.ssafy.aitime.domain.hospital.dto.request.PatientSearchRequest;
-import com.ssafy.aitime.domain.hospital.dto.response.PatientSearchResponse;
+import com.ssafy.aitime.domain.hospital.dto.response.*;
+import com.ssafy.aitime.domain.hospital.entity.Hospital;
 import com.ssafy.aitime.domain.hospital.entity.HospitalChildren;
+import com.ssafy.aitime.domain.hospital.entity.HospitalStaff;
 import com.ssafy.aitime.domain.hospital.entity.Reservation;
 import com.ssafy.aitime.domain.hospital.entity.enums.LinkStatus;
 import com.ssafy.aitime.domain.hospital.entity.enums.ReservationStatus;
 import com.ssafy.aitime.domain.hospital.entity.enums.StaffRole;
 import com.ssafy.aitime.domain.hospital.exception.DoctorNotFoundException;
+import com.ssafy.aitime.domain.hospital.exception.HospitalStaffAccessDeniedException;
 import com.ssafy.aitime.domain.hospital.repository.HospitalChildrenRepository;
 import com.ssafy.aitime.domain.hospital.repository.HospitalStaffRepository;
 import com.ssafy.aitime.domain.hospital.repository.ReservationRepository;
 import com.ssafy.aitime.domain.user.entity.User;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import java.lang.reflect.Method;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
@@ -37,310 +49,252 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+// ✅ 헬퍼 메서드에서 공통으로 설정한 Stubbing 중 일부가 호출되지 않아도 에러를 무시하도록 설정
+@MockitoSettings(strictness = Strictness.LENIENT)
 class DoctorServiceImplTest {
 
     @Mock private ReservationRepository reservationRepository;
     @Mock private HospitalChildrenRepository hospitalChildrenRepository;
     @Mock private HospitalStaffRepository hospitalStaffRepository;
-    @Mock private ChildRepository childRepository;
-    @Mock private ExamRepository examRepository;
+    @Mock private ChildService childService;
+    @Mock private ExamService examService;
+    @Mock private VideoService videoService;
 
     @InjectMocks
     private DoctorServiceImpl doctorService;
 
-    @Test
-    void getSearchPatientList_withDateFilter_returnsPatients() {
-        // given
-        UUID doctorId = UUID.randomUUID();
+    @Nested
+    @DisplayName("환자 목록 검색 테스트")
+    class SearchPatientTest {
 
-        PatientSearchRequest req = mock(PatientSearchRequest.class);
-        LocalDate filterDate = LocalDate.of(2026, 1, 26);
-        LocalDateTime startOfDay = filterDate.atStartOfDay();
-        LocalDateTime endOfDay = filterDate.plusDays(1).atStartOfDay();
+        @Test
+        @DisplayName("날짜 필터와 페이징이 적용된 환자 목록을 반환한다")
+        void getSearchPatientList_success() {
+            // given
+            UUID doctorId = UUID.randomUUID();
+            PatientSearchRequest req = mock(PatientSearchRequest.class);
+            LocalDate filterDate = LocalDate.of(2026, 1, 26);
 
-        given(req.getEffectiveDate()).willReturn(filterDate);
-        given(req.hasNameFilter()).willReturn(false);
-        given(req.hasResultStatusFilter()).willReturn(false);
-        given(req.page()).willReturn(0);
-        given(req.size()).willReturn(10);
+            given(req.getEffectiveDate()).willReturn(filterDate);
+            given(req.hasNameFilter()).willReturn(false);
+            given(req.hasResultStatusFilter()).willReturn(false);
+            given(req.page()).willReturn(0);
+            given(req.size()).willReturn(10);
 
-        // doctor validation
-        given(hospitalStaffRepository.existsByHospitalStaffIdAndStaffRoleAndRecordStatus(
-                eq(doctorId), eq(StaffRole.DOCTOR), eq(RecordStatus.ACTIVE)
-        )).willReturn(true);
+            given(hospitalStaffRepository.existsByHospitalStaffIdAndStaffRoleAndRecordStatus(any(), any(), any()))
+                    .willReturn(true);
 
-        // reservations -> hospitalChildrenIds
-        UUID hcId1 = UUID.randomUUID();
-        UUID hcId2 = UUID.randomUUID();
+            // UUID 설정
+            UUID hcId = UUID.randomUUID();
+            UUID childId = UUID.randomUUID();
 
-        Reservation r1 = mockReservation(hcId1);
-        Reservation r2 = mockReservation(hcId1); // 중복
-        Reservation r3 = mockReservation(hcId2);
+            // Reservation mock 설정
+            Reservation res = mock(Reservation.class);
+            LocalDateTime scheduledAt = LocalDateTime.of(2026, 1, 26, 14, 0);
+            given(res.getScheduledAt()).willReturn(scheduledAt);
 
-        given(reservationRepository.findByDoctorIdAndReservationStatusNotAndScheduledAtBetween(
-                eq(doctorId), eq(ReservationStatus.CANCELLED), eq(startOfDay), eq(endOfDay)
-        )).willReturn(List.of(r1, r2, r3));
+            // HospitalChildren mock 설정
+            HospitalChildren hc = mockHospitalChildren(hcId, childId, UUID.randomUUID());
+            given(res.getHospitalChildren()).willReturn(hc);
+            given(hc.getHospitalChildrenId()).willReturn(hcId);
 
-        // hospital_children -> childIds
-        UUID childId1 = UUID.randomUUID();
-        UUID childId2 = UUID.randomUUID();
+            given(reservationRepository.findByDoctorIdAndReservationStatusNotAndScheduledAtBetween(any(), any(), any(), any()))
+                    .willReturn(List.of(res));
 
-        HospitalChildren hc1 = mockHospitalChildren(hcId1, childId1);
-        HospitalChildren hc2 = mockHospitalChildren(hcId2, childId2);
+            // Child mock 설정
+            Child child = mockChild(childId, "홍길동");
+            given(child.getChildId()).willReturn(childId);
+            given(child.getName()).willReturn("홍길동");
+            given(child.getGender()).willReturn(Gender.MALE);
+            given(child.getBirthdate()).willReturn(LocalDate.of(2024, 1, 26)); // 24개월
 
-        given(hospitalChildrenRepository.findByHospitalChildrenIdInAndLinkStatus(
-                argThat(list -> list.containsAll(List.of(hcId1, hcId2))), eq(LinkStatus.ACTIVE)
-        )).willReturn(List.of(hc1, hc2));
+            given(hc.getChild()).willReturn(child);
 
-        // children
-        UUID userId1 = UUID.randomUUID();
-        UUID userId2 = UUID.randomUUID();
+            given(hospitalChildrenRepository.findByHospitalChildrenIdInAndLinkStatus(anyList(), any()))
+                    .willReturn(List.of(hc));
 
-        Child c1 = mockChild(childId1, userId1, "홍길동", LocalDate.of(2015, 5, 20), Gender.MALE);
-        Child c2 = mockChild(childId2, userId2, "김철수", LocalDate.of(2016, 6, 10), Gender.FEMALE);
+            // childService로 변경
+            given(childService.getChildrenByIds(anyList())).willReturn(List.of(child));
 
-        given(childRepository.findByChildIdInAndRecordStatus(
-                argThat(list -> list.containsAll(List.of(childId1, childId2))), eq(RecordStatus.ACTIVE)
-        )).willReturn(List.of(c1, c2));
+            given(examService.getExamsByChildIds(anyList())).willReturn(Collections.emptyList());
 
-        // exams 비워두면 latestExamStatus = "NONE"
-        given(examRepository.findByChild_ChildIdInOrderByCompletedAtDesc(anyList()))
-                .willReturn(Collections.emptyList());
+            // when
+            PatientSearchResponse resp = doctorService.getSearchPatientList(doctorId, req);
 
-        // when
-        PatientSearchResponse resp = doctorService.getSearchPatientList(doctorId, req);
+            // then
+            assertThat(resp.total()).isEqualTo(1);
+            assertThat(resp.data()).hasSize(1);
 
-        // then (반환값은 DTO가 record/class 어느 쪽이든 동작하게 reflection으로 검증)
-        List<?> items = extractList(resp);
-        int total = extractTotal(resp);
+            ChildResponse childResponse = resp.data().get(0);
+            assertThat(childResponse.hospitalChildrenId()).isEqualTo(hcId);
+            assertThat(childResponse.childName()).isEqualTo("홍길동");
+            assertThat(childResponse.gender()).isEqualTo("MALE");
+            assertThat(childResponse.months()).isEqualTo(24);
+            assertThat(childResponse.scheduledAt()).isEqualTo(scheduledAt);
+            assertThat(childResponse.examStatus()).isEqualTo("NONE");
+            assertThat(childResponse.isSubmitted()).isFalse();
+        }
 
-        assertThat(items).hasSize(2);
-        assertThat(total).isEqualTo(2);
-
-        // date 필터 경로로 호출됐는지 확인
-        verify(reservationRepository, times(1))
-                .findByDoctorIdAndReservationStatusNotAndScheduledAtBetween(
-                        eq(doctorId), eq(ReservationStatus.CANCELLED), eq(startOfDay), eq(endOfDay)
-                );
-        verify(reservationRepository, never())
-                .findByDoctorIdAndReservationStatusNot(eq(doctorId), eq(ReservationStatus.CANCELLED));
+        @Test
+        @DisplayName("의사가 존재하지 않으면 DoctorNotFoundException이 발생한다")
+        void getSearchPatientList_doctorNotFound() {
+            given(hospitalStaffRepository.existsByHospitalStaffIdAndStaffRoleAndRecordStatus(any(), any(), any())).willReturn(false);
+            assertThatThrownBy(() -> doctorService.getSearchPatientList(UUID.randomUUID(), mock(PatientSearchRequest.class)))
+                    .isInstanceOf(DoctorNotFoundException.class);
+        }
     }
 
-    @Test
-    void getSearchPatientList_noDateFilter_withNameFilter_andPaging() {
-        // given
-        UUID doctorId = UUID.randomUUID();
+    @Nested
+    @DisplayName("상세 정보 및 레포트 조회 테스트")
+    class DetailInfoTest {
 
-        PatientSearchRequest req = mock(PatientSearchRequest.class);
-        given(req.getEffectiveDate()).willReturn(null);
+        @Test
+        @DisplayName("특정 환아의 검사 목록과 비디오 요약을 조회한다")
+        void getExamsByHospitalChildren_success() {
+            // given
+            UUID staffId = UUID.randomUUID();
+            UUID hcId = UUID.randomUUID();
+            UUID hospitalId = UUID.randomUUID();
+            UUID childId = UUID.randomUUID();
 
-        given(req.hasNameFilter()).willReturn(true);
-        given(req.name()).willReturn("길"); // "홍길동"만 남게
-        given(req.hasResultStatusFilter()).willReturn(false);
+            HospitalStaff staff = mockStaff(staffId, hospitalId);
+            HospitalChildren hc = mockHospitalChildren(hcId, hospitalId, childId);
 
-        given(req.page()).willReturn(0);
-        given(req.size()).willReturn(1); // 페이징으로 1개만
+            given(hospitalStaffRepository.findById(staffId)).willReturn(Optional.of(staff));
+            given(hospitalChildrenRepository.findById(hcId)).willReturn(Optional.of(hc));
 
-        given(hospitalStaffRepository.existsByHospitalStaffIdAndStaffRoleAndRecordStatus(
-                eq(doctorId), eq(StaffRole.DOCTOR), eq(RecordStatus.ACTIVE)
-        )).willReturn(true);
+            Exam exam = mock(Exam.class);
+            UUID examId = UUID.randomUUID();
+            given(exam.getExamId()).willReturn(examId);
+            given(exam.getExamStatus()).willReturn(ExamStatus.COMPLETED);
+            given(exam.getCreatedAt()).willReturn(LocalDateTime.now());
+            given(examService.getExamsByChildId(childId)).willReturn(List.of(exam));
 
-        UUID hcId1 = UUID.randomUUID();
-        UUID hcId2 = UUID.randomUUID();
+            Video video = mock(Video.class);
+            given(video.getExam()).willReturn(exam);
+            given(video.getVideoId()).willReturn(UUID.randomUUID());
+            given(video.getVideoType()).willReturn(VideoType.POSE_IMITATION);
+            given(videoService.getVideosByExamIds(anyList())).willReturn(List.of(video));
 
-        Reservation r1 = mockReservation(hcId1);
-        Reservation r2 = mockReservation(hcId2);
+            // when
+            List<ExamWithVideosResponse> result = doctorService.getExamsByHospitalChildren(staffId, hcId);
 
-        given(reservationRepository.findByDoctorIdAndReservationStatusNot(
-                eq(doctorId), eq(ReservationStatus.CANCELLED)
-        )).willReturn(List.of(r1, r2));
+            // then
+            assertThat(result).hasSize(1);
+            assertThat(result.get(0).videos()).hasSize(1);
+        }
 
-        UUID childId1 = UUID.randomUUID();
-        UUID childId2 = UUID.randomUUID();
+        @Test
+        @DisplayName("다른 병원 소속의 검사 상세 정보를 조회하면 예외가 발생한다")
+        void getAdosDetail_accessDenied() {
+            // given
+            UUID staffId = UUID.randomUUID();
+            UUID examId = UUID.randomUUID();
+            HospitalStaff staff = mockStaff(staffId, UUID.randomUUID()); // 병원 A
 
-        HospitalChildren hc1 = mockHospitalChildren(hcId1, childId1);
-        HospitalChildren hc2 = mockHospitalChildren(hcId2, childId2);
+            Exam exam = mock(Exam.class);
+            given(exam.getChild()).willReturn(mock(Child.class));
+            given(hospitalStaffRepository.findById(staffId)).willReturn(Optional.of(staff));
+            given(examService.getExamById(examId)).willReturn(exam);
 
-        given(hospitalChildrenRepository.findByHospitalChildrenIdInAndLinkStatus(anyList(), eq(LinkStatus.ACTIVE)))
-                .willReturn(List.of(hc1, hc2));
+            // 병원 B와 연동된 상태 (false)
+            given(hospitalChildrenRepository.existsByChildAndHospitalAndLinkStatus(any(), any(), any())).willReturn(false);
 
-        Child c1 = mockChild(childId1, UUID.randomUUID(), "홍길동", LocalDate.of(2015, 5, 20), Gender.MALE);
-        Child c2 = mockChild(childId2, UUID.randomUUID(), "김철수", LocalDate.of(2016, 6, 10), Gender.MALE);
+            // when & then
+            assertThatThrownBy(() -> doctorService.getAdosDetail(staffId, examId))
+                    .isInstanceOf(HospitalStaffAccessDeniedException.class);
+        }
 
-        given(childRepository.findByChildIdInAndRecordStatus(anyList(), eq(RecordStatus.ACTIVE)))
-                .willReturn(List.of(c1, c2));
+        @Test
+        @DisplayName("초기 레포트 데이터를 통합하여 반환한다")
+        void getInitialReport_success() {
+            // given
+            UUID staffId = UUID.randomUUID();
+            UUID hcId = UUID.randomUUID();
+            UUID hospitalId = UUID.randomUUID();
+            UUID childId = UUID.randomUUID();
+            UUID examId = UUID.randomUUID();
 
-        given(examRepository.findByChild_ChildIdInOrderByCompletedAtDesc(anyList()))
-                .willReturn(Collections.emptyList()); // NONE
+            HospitalStaff staff = mockStaff(staffId, hospitalId);
+            HospitalChildren hc = mockHospitalChildren(hcId, hospitalId, childId);
 
-        // when
-        PatientSearchResponse resp = doctorService.getSearchPatientList(doctorId, req);
+            given(hospitalStaffRepository.findById(staffId)).willReturn(Optional.of(staff));
+            given(hospitalChildrenRepository.findById(hcId)).willReturn(Optional.of(hc));
 
-        // then
-        List<?> items = extractList(resp);
-        int total = extractTotal(resp);
+            Exam exam = mock(Exam.class);
+            given(exam.getExamId()).willReturn(examId);
+            given(exam.getExamStatus()).willReturn(ExamStatus.COMPLETED);
+            given(exam.getCreatedAt()).willReturn(LocalDateTime.now());
+            given(examService.getExamsByChildId(childId)).willReturn(List.of(exam));
+            given(videoService.getVideosByExamIds(anyList())).willReturn(Collections.emptyList());
 
-        // 이름 필터 후 총 1명, 페이지 size=1이라 items도 1명
-        assertThat(total).isEqualTo(1);
-        assertThat(items).hasSize(1);
+            given(examService.getAdosGraphData(childId)).willReturn(mock(AdosReportGraphsResponse.class));
+            given(examService.getAdosDetail(examId)).willReturn(mock(AdosDetailResponse.class));
 
-        // no-date 경로 호출 확인
-        verify(reservationRepository, times(1))
-                .findByDoctorIdAndReservationStatusNot(eq(doctorId), eq(ReservationStatus.CANCELLED));
-        verify(reservationRepository, never())
-                .findByDoctorIdAndReservationStatusNotAndScheduledAtBetween(any(), any(), any(), any());
+            // when
+            InitialReportResponse response = doctorService.getInitialReport(staffId, hcId, 300L);
+
+            // then
+            assertThat(response).isNotNull();
+            assertThat(response.examVideoList()).isNotEmpty();
+        }
     }
 
-    @Test
-    void getSearchPatientList_doctorNotFound_throws() {
-        // given
-        UUID doctorId = UUID.randomUUID();
-        PatientSearchRequest req = mock(PatientSearchRequest.class);
+    // ---------------- Helper Methods ----------------
 
-        given(hospitalStaffRepository.existsByHospitalStaffIdAndStaffRoleAndRecordStatus(
-                eq(doctorId), eq(StaffRole.DOCTOR), eq(RecordStatus.ACTIVE)
-        )).willReturn(false);
-
-        // when & then
-        assertThatThrownBy(() -> doctorService.getSearchPatientList(doctorId, req))
-                .isInstanceOf(DoctorNotFoundException.class);
-
-        verifyNoInteractions(reservationRepository);
-        verifyNoInteractions(hospitalChildrenRepository);
-        verifyNoInteractions(childRepository);
-        verifyNoInteractions(examRepository);
+    private HospitalStaff mockStaff(UUID staffId, UUID hospitalId) {
+        HospitalStaff staff = mock(HospitalStaff.class);
+        Hospital hospital = mock(Hospital.class);
+        given(hospital.getHospitalId()).willReturn(hospitalId);
+        given(staff.getHospital()).willReturn(hospital);
+        given(staff.getHospitalStaffId()).willReturn(staffId);
+        return staff;
     }
 
-    // ---------------- helpers ----------------
-
-    private static Reservation mockReservation(UUID hospitalChildrenId) {
-        Reservation r = mock(Reservation.class);
+    private HospitalChildren mockHospitalChildren(UUID hcId, UUID hospitalId, UUID childId) {
         HospitalChildren hc = mock(HospitalChildren.class);
-        given(hc.getHospitalChildrenId()).willReturn(hospitalChildrenId);
-        given(r.getHospitalChildren()).willReturn(hc);
-        return r;
-    }
-
-    private static HospitalChildren mockHospitalChildren(UUID childId) {
-        HospitalChildren hc = mock(HospitalChildren.class);
+        Hospital hospital = mock(Hospital.class);
         Child child = mock(Child.class);
 
+        given(hospital.getHospitalId()).willReturn(hospitalId);
         given(child.getChildId()).willReturn(childId);
+        given(hc.getHospital()).willReturn(hospital);
         given(hc.getChild()).willReturn(child);
-
-        // ✅ 아래 stubbing은 서비스에서 안 써서 UnnecessaryStubbingException 유발 가능
-        // given(hc.getHospitalChildrenId()).willReturn(hospitalChildrenId);
-
+        given(hc.getHospitalChildrenId()).willReturn(hcId);
+        given(hc.getLinkStatus()).willReturn(LinkStatus.ACTIVE);
         return hc;
     }
 
-
-    private static Child mockChild(UUID childId, UUID userId, String name, LocalDate birthdate, Gender gender) {
+    private Child mockChild(UUID childId, String name) {
         Child child = mock(Child.class);
         User user = mock(User.class);
-
-        given(user.getUserId()).willReturn(userId);
-
+        given(user.getUserId()).willReturn(UUID.randomUUID());
         given(child.getChildId()).willReturn(childId);
         given(child.getUser()).willReturn(user);
         given(child.getName()).willReturn(name);
-        given(child.getBirthdate()).willReturn(birthdate);
-        given(child.getGender()).willReturn(gender);
-
+        given(child.getBirthdate()).willReturn(LocalDate.of(2020, 1, 1));
+        given(child.getGender()).willReturn(Gender.MALE);
         return child;
     }
 
+    // ---------------- Reflection Helpers (DTO 검증용) ----------------
+
     @SuppressWarnings("unchecked")
     private static List<?> extractList(Object resp) {
-        // 1) 흔한 이름 후보 먼저 시도
-        for (String m : List.of(
-                "items", "getItems",
-                "children", "getChildren",
-                "patientList", "getPatientList",
-                "responses", "getResponses",
-                "data", "getData"
-        )) {
+        for (String m : List.of("childResponses", "getChildResponses", "items", "getItems")) {
             Object v = tryInvoke(resp, m);
             if (v instanceof List) return (List<?>) v;
         }
-
-        // 2) 이름 몰라도 OK: "인자 없고 List 반환" public 메서드 탐색
-        Method candidate = Arrays.stream(resp.getClass().getMethods())
-                .filter(m -> m.getParameterCount() == 0)
-                .filter(m -> List.class.isAssignableFrom(m.getReturnType()))
-                .findFirst()
-                .orElse(null);
-
-        if (candidate == null) {
-            String methods = Arrays.stream(resp.getClass().getMethods())
-                    .filter(m -> m.getDeclaringClass() != Object.class)
-                    .map(m -> m.getName() + " : " + m.getReturnType().getSimpleName())
-                    .distinct()
-                    .sorted()
-                    .reduce("", (a, b) -> a + "\n- " + b);
-
-            fail("PatientSearchResponse에서 List 반환 메서드를 못 찾았어. 발견된 메서드:" + methods);
-        }
-
-        try {
-            Object v = candidate.invoke(resp);
-            if (v instanceof List) return (List<?>) v;
-            fail("List 반환 메서드로 보였는데 실제 반환이 List가 아니야: " + candidate.getName());
-            return List.of();
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+        return Collections.emptyList();
     }
 
     private static int extractTotal(Object resp) {
-        // 1) 흔한 이름 후보 먼저 시도
-        for (String m : List.of(
-                "total", "getTotal",
-                "count", "getCount",
-                "totalCount", "getTotalCount"
-        )) {
+        for (String m : List.of("totalCount", "getTotalCount", "total", "getTotal")) {
             Object v = tryInvoke(resp, m);
-            Integer parsed = toInt(v);
-            if (parsed != null) return parsed;
+            if (v instanceof Integer i) return i;
+            if (v instanceof Long l) return l.intValue();
         }
-
-        // 2) 이름 몰라도 OK: "인자 없고 숫자 반환" public 메서드 탐색
-        Method candidate = Arrays.stream(resp.getClass().getMethods())
-                .filter(m -> m.getParameterCount() == 0)
-                .filter(m -> {
-                    Class<?> rt = m.getReturnType();
-                    return rt == int.class || rt == Integer.class || rt == long.class || rt == Long.class;
-                })
-                .findFirst()
-                .orElse(null);
-
-        if (candidate == null) {
-            String methods = Arrays.stream(resp.getClass().getMethods())
-                    .filter(m -> m.getDeclaringClass() != Object.class)
-                    .map(m -> m.getName() + " : " + m.getReturnType().getSimpleName())
-                    .distinct()
-                    .sorted()
-                    .reduce("", (a, b) -> a + "\n- " + b);
-
-            fail("PatientSearchResponse에서 total/count 반환 메서드를 못 찾았어. 발견된 메서드:" + methods);
-        }
-
-        try {
-            Object v = candidate.invoke(resp);
-            Integer parsed = toInt(v);
-            if (parsed != null) return parsed;
-            fail("total 반환 메서드로 보였는데 int로 변환이 안돼: " + candidate.getName());
-            return 0;
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private static Integer toInt(Object v) {
-        if (v instanceof Integer i) return i;
-        if (v instanceof Long l) return Math.toIntExact(l);
-        if (v instanceof Short s) return (int) s;
-        return null;
+        return 0;
     }
 
     private static Object tryInvoke(Object target, String methodName) {
